--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,14 @@ a {
 
 }
 
+@-webkit-keyframes ltor {
+    0% { left: -70px;}
+    25%{ left : -140px;}
+    50%{ left: -170px;}
+    75%{ left: -140px;}
+    100%{ left: -70px;}
+}
+
 @keyframes ltor {
     0% { left: -70px;}
     25%{ left : -140px;}
@@ -379,7 +387,120 @@ margin-bottom: 0;
     width: 80%;
     line-height: 38px;
 }
+.psection-1 {
+    padding: 180px 0;
+    position: relative;
+}
+.plicon_inr h4 {
+    color: #fff;
+    font-size: 18px;
+    margin-bottom: 0;
+    text-align: left;
+}
+.psection-1 .col-4.plicons {
+    display: flex;
+    align-items: center;
+}
+.psection-1 .plicon_inr {
+    text-align: center;
+    padding: 40px 50px;
+    display: flex;
+}
+.psection-1 + .psection-1 {
+    padding-top: 50px;
+}
+.psection-1 .row {
+    position: relative;
+    z-index: 999;
+}
+.pf_text.pfr h3 {
+    text-align: right;
+    padding-right: 5vw;
+}
 
+.cline.msline {
+    -webkit-animation: none;
+            animation: none;
+    left: calc(-50vw + 50%);
+}
+.plicon_inr:not(.noimg) {
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+}
+.psection-1 .plicon_inr img {
+    max-height: 60px;
+    object-fit: contain;
+}
+.red_strip.clients {
+    background: url(../img/clientsbg.jpg) no-repeat center transparent;
+}
+
+.psection-1.ps4 {
+    padding-top: 250px;
+}
+.cline.lline {
+    top: 285px;
+    left: calc(-50vw + 50%);
+    animation: none;
+}
+.cline.lline img {
+    width: 100vw;
+}
+.asrts_se {
+    position: relative;
+    padding-bottom: 200px;
+}
+.artists {
+    position: relative;
+    z-index: 999;
+    display: flex;
+}
+.asrts_se .cline.lline {
+    top: 50%;
+    transform: translateY(-50%);
+}
+.each_art {
+    padding: 0 60px;
+    position: relative;
+    z-index: 99;
+}
+.each_art img {
+    width: 200px;
+    margin: 0 10px;
+    background: #18171c;
+    padding: 10px;
+    border-radius: 100%;
+    border: 1px solid #4d4c51;
+    pointer-events: none;
+}
+.each_art.art1 {
+    top: 24px;
+}
+.artistr h3 {
+    color: #fff;
+    margin-bottom: 90px;
+}
+.each_art.art2 {
+    top: 95px;
+}
+.each_art.art3 {
+    top: 30px;
+}
+.each_art.art4 {
+    padding-top: top;
+    top: -40px;
+}
+.each_art.art5 {
+    top: 65px;
+}
+.each_art h5 {
+    color: #cccccc;
+    font-size: 16px;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 0;
+}
 /* MQ */
 
 @media only screen and (max-width:1610px) {
@@ -468,6 +589,20 @@ margin-bottom: 0;
     .wh_made {
         padding: 180px 0;
     }
+    .each_art h5 {
+        font-size: 13px;
+    }
+    .psection-1 .plicon_inr {
+        text-align: center;
+        padding: 30px 30px;
+    }
+    .psection-1 .plicon_inr img {
+        max-height: 40px;
+        object-fit: contain;
+    }
+    .plicon_inr img {
+        width: 140px;
+    }
 }
 
 @media only screen and (max-width:1366px){
@@ -486,6 +621,31 @@ margin-bottom: 0;
     }
     .cline.whline1 {
         top: -22px;
+    }
+    .cline.lline {
+        top: 305px;
+    }
+    .psection-1.ps5 .col-4.plicons:first-child img {
+        width: 40px !important;
+    }
+    .each_art.art1 {
+        top: 19px;
+    }
+    .each_art.art2 {
+        top: 75px;
+    }
+    .each_art.art3 {
+        top: 10px;
+    }
+    .each_art.art4 {
+        padding-top: top;
+        top: -20px;
+    }
+    .each_art.art5 {
+        top: 55px;
+    }
+    .each_art {
+        padding: 0 45px;
     }
 }
 
@@ -515,6 +675,33 @@ margin-bottom: 0;
     .ab_title h3 {
         font-size: 16px;
         margin-bottom: 0;
+    }
+    .tl h3 {
+        font-size: 20px;
+    }
+    .img-fluid.whimg {
+        max-height: 300px;
+    }
+    .tr h3 {
+        font-size: 22px;
+    }
+    .wh_made h3 {
+        font-size: 36px;
+    }
+    .wh_made {
+        padding: 160px 0;
+    }
+    .wh_row {
+        padding: 60px 0 140px;
+    }
+    .wstxt {
+        font-size: 24px;
+    }
+    .whst2 {
+        padding: 100px 0;
+    }
+    .each_art {
+        padding: 0 25px;
     }
 }
 
@@ -706,13 +893,90 @@ margin-bottom: 0;
         line-height: 40px;
         padding: 60px 0;
     }
+    .psection-1 > .row {
+        flex-direction: column;
+        text-align: center;
+    }
+    .psection-1 .plicon_inr img {
+        max-height: 40px;
+        object-fit: contain;
+        width: 100%;
+    }
+    .psection-1 .col-md-6 {
+        flex-basis: 100%;
+        max-width: 100%;
+    }
+    .psection-1 .plicon_inr img {
+        object-fit: contain;
+        width: 100%;
+        max-width: 150px;
+        max-height: 30px;
+    }
+    .psection-1 .plicon_inr {
+        text-align: center;
+        padding: 50px 30px;
+    }
+    .psection-1 .pf_text h3 {
+        max-width: 100%;
+        margin-top: 0;
+        margin-bottom: 50px;
+    }
+    .psection-1 .pf_text.aos-init.aos-animate {
+        transition-delay: 0.3s !important;
+    }
     
+    .psection-1 > .row.prew {
+        flex-direction: column-reverse;
+    }
+    .pf_text.pfr h3 {
+        text-align: center;
+        padding-right: 0;
+    }
+    .each_art {
+        padding: 0 45px;
+    }
+    .each_art img {
+        padding: 4px;
+    }
+    /* .each_art.art2 {
+        top: 95px;
+    }
+    .each_art.art3 {
+        top: 60px;
+    }
+    .each_art.art4 {
+        top: 10px;
+    }
+    .each_art.art5 {
+        top: 5px;
+    } */
+    .cline.lline img {
+        width: 100vw !important;
+    }
 }
 
 
 @media only screen and (max-width:992px) {
     .cline img {
         width: 165vw !important;
+    }
+    .cline.lline img {
+        width: 100vw !important;
+    }
+    .each_art h5 {
+        font-size: 10px;
+    }
+    .each_art {
+        padding: 0 50px;
+    }
+    .each_art.art1 {
+        top: 40px;
+    }
+    .each_art.art3 {
+        top: 30px;
+    }
+    .each_art.art4 {
+        top: 10px;
     }
 }
 
@@ -748,6 +1012,110 @@ margin-bottom: 0;
         width: 155vw !important;
         transform: rotate(36deg) translateX(0%) translateY(80%);
     }
+
+    /* .tl [data-aos="fade-right"] {
+        transform: translate3d(100px,0,0);
+    } */
+
+    .tl [data-aos][data-aos][data-aos-delay="800"].aos-animate {
+        transition-delay: .3s;
+    }
+    .tl [data-aos][data-aos][data-aos-delay="300"].aos-animate {
+        transition-delay: .8s;
+    }
+    .wh_row.row.tl {
+        flex-direction: column-reverse;
+    }
+    .tl .whim {
+        margin-bottom: 50px;
+    }
+    .tr .whim {
+        margin-bottom: 50px;
+    }
+    .wh_row {
+        padding: 60px 0;
+    }
+    .cont.bg.whyc .container-fluid {
+        padding-bottom: 60px;
+    }
+    .tr .whim::before, .tl .whim::before {
+        width: 200px;
+        height: 200px;
+    }
+    .cont.bg.whyc {
+        padding: 50px 0 0;
+    }
+    .tl h3 {
+        padding-right: 0;
+        font-size: 18px !important;
+        line-height: 36px;
+    }
+    .tr h3 {
+        padding-left: 0;
+        padding-right: 0;
+        font-size: 18px;
+        line-height: 36px;
+    }
+    .img-fluid.whimg {
+        max-height: 250px;
+    }
+    .wh_made {
+        padding: 80px 0;
+        background-size: cover;
+    }
+    .cont.bg.whyc .container-fluid {
+        padding-bottom: 0;
+    }
+    .wh_made h3 {
+        font-size: 26px;
+        margin-bottom: 0;
+    }
+    .wstxt {
+        font-size: 20px;
+        line-height: 32px;
+    }
+    .whst2 {
+        padding: 60px 0;
+    }
+    .cline img {
+        width: 185vw !important;
+        opacity: 0.5;
+    }
+    
+    .cline.lline img {
+        width: 100vw !important;
+        transform: none;
+    }
+    .each_art img {
+        margin: 0;
+    }
+    .each_art {
+        padding: 0px 5%;
+    }
+}
+
+@media only screen and (max-width:700px){
+    .each_art {
+        position: relative;
+        left: auto !important;
+        top: auto !important;
+        max-width: 50%;
+        flex-basis: 50%;
+    }
+    .artists {
+        flex-wrap: wrap;
+    }
+    .each_art {
+        padding: 0px 70px;
+        margin-bottom: 50px;
+        text-align: center;
+    }
+    .artistr h3 {
+        text-align: center;
+    }
+    .each_art h5 {
+        font-size: 12px;
+    }
 }
 
 @media only screen and (max-width:600px){
@@ -771,6 +1139,41 @@ margin-bottom: 0;
         line-height: 36px;
         padding: 60px 0;
     }
+    .each_art {
+        padding: 0px 30px;
+    }
+    .asrts_se {
+        padding-bottom: 30px;
+    }
+    .psection-1 .col-4.plicons {
+        flex-basis: 50%;
+        max-width: 50%;
+    }
+    .psection-1 {
+        padding-left: 2px;
+    }
+    .psection-1 {
+        padding: 80px 0;
+    }
+    .ps2 .col-4.plicons:last-child {
+        display: none;
+    }
+    .psection-1.ps4 {
+        padding-top: 100px;
+    }
+    .psection-1.ps4 .col-4.plicons {
+        flex-basis: 100%;
+        max-width: 100%;
+    }
+    .ps5 .col-4.plicons:last-child {
+        display: none;
+    }
+    .psection-1 .pf_text h3 {
+        font-size: 22px;
+    }
+    .red_strip.clients {
+        padding: 30px;
+        background-size: 
 }
 
 @media only screen and (max-width:480px){
@@ -800,4 +1203,14 @@ margin-bottom: 0;
     .plicon_inr {
         padding: 24px 0;
     }
+    .tr h3,.tl h3 {
+        padding-left: 15px;
+        padding-right: 15px;
+        font-size: 16px !important;
+        line-height: 32px;
+    }
+    .each_art h5 {
+        font-size: 10px;
+    }
+    
 }
