--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@ html, body {
     overflow-x: hidden;
     font-family: 'Comfortaa', cursive;
 }
+select, option {
+    font-family: 'Comfortaa', cursive;
+}
 a {
     text-decoration: none !important;
 }
@@ -536,7 +539,7 @@ margin-bottom: 0;
 .loc_icon {
     padding-right: 35px;
 }
-.locarea LI {
+.locarea li {
     display: inline-block;
     padding: 0 35px;
     font-size: 20px;
@@ -570,10 +573,129 @@ margin-bottom: 0;
     font-size: 18px;
     transition: all 0.3s ease-in-out;
 }
-.choosebtn a:hover {
+.choosebtn a:hover,.choosebtn a.active {
     background: #ec1c24;
     color: #fff;
     border-color: #ec1c24;
+}
+.formholder {
+    color: #fff;
+    display: flex;
+    align-items: flex-start;
+    width: 200%;
+}
+
+.formholder > div {
+    width: 100%;
+    max-width: 100;
+    flex-basis: 99%;
+    width:100%;
+    overflow: hidden;
+    transition: all 0.2s ease-in-out;
+    /* min-height: 0; */
+    opacity: 0;
+}
+.formholder > div.active {
+    max-width: 100%;
+    flex-basis: 99%;
+    width: 100%;
+    /* min-height: 300px; */
+    opacity: 1;
+}
+.formholder .form-group {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -100px;
+}
+.producer_form {
+    transform: translateX(-100%);
+}
+.artist_form {
+    transform: translateX(100%);
+}
+.producer_form.active {
+    transform: translateX(0);
+}
+.artist_form.active {
+    transform: translateX(-100%);
+}
+.contact_section {
+    max-width: 100%;
+    overflow: hidden;
+}
+.form-col {
+    flex-basis: calc(100%/3);
+    max-width: calc(100%/3);
+    padding: 30px 100px;
+}
+.form-col input, .form-col select, .bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
+    width: 100%;
+    background: transparent;
+    color: #ccc;
+    border: 0;
+    border-bottom: 1px solid;
+    padding: 8px 0;
+    font-family: 'Comfortaa', cursive;
+}
+.select2-container {
+    border-bottom: 0    ;
+}
+.form-col select option {   
+    background: transparent;
+    color: #ccc;
+    font-family: 'Comfortaa', cursive;
+}
+.select2-container--default .select2-selection--single {
+    background-color: transparent;
+    border: 0;
+    border-radius: 0;
+}
+.form-col  .btn-light {
+    color: #212529;
+    background-color: transparent;
+    border: 0;
+    color: #ccc;
+    opacity: 0.6;
+    padding: 0;
+}
+.btn-light:not(:disabled):not(.disabled).active, .btn-light:not(:disabled):not(.disabled):active, .show > .btn-light.dropdown-toggle {
+    color: #ccc;
+    background-color: transparent;
+    border: 0;
+}
+.form-col .btn-light.focus, .btn-light:focus {
+    box-shadow: none !important;
+    outline: none !important;
+}
+.bootstrap-select .dropdown-toggle:focus, .bootstrap-select > select.mobile-device:focus + .dropdown-toggle {
+    outline: none !important; 
+}
+.dropdown-menu.show {
+    top: 10px !important;
+}
+.form_submit {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 50px;
+}
+
+.form-col input.send {
+    border: 1px solid #ec1c24;
+    transition: all 0.3s ease-in-out;
+}
+.form-col input.send:focus,.form-col input.send:hover,.form-col input.send:active {
+    background: #ec1c24;
+    color:#fff;
+    cursor: pointer;
+}
+.form-col .dropdown-item.active, .form-col .dropdown-item:active {
+    color: #fff;
+    text-decoration: none;
+    background-color: #ec1c24;
+}
+.artist_form {
+    padding-bottom: 100px;
 }
 /* MQ */
 
@@ -677,6 +799,13 @@ margin-bottom: 0;
     .plicon_inr img {
         width: 140px;
     }
+    .choosebtn a {
+        padding: 16px 10px;
+        font-size: 16px;
+    }
+    .choosebtn {
+        padding: 60px 0;
+    }
 }
 
 @media only screen and (max-width:1366px){
@@ -720,6 +849,41 @@ margin-bottom: 0;
     }
     .each_art {
         padding: 0 45px;
+    }
+    .locarea li {
+        font-size: 16px;
+        line-height: 16px;
+    }
+    .contact_locs {
+        padding-top: 30px;
+    }
+    .form-col input, .form-col select, .bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
+        font-size: 14px;
+    }
+    .choosebtn a {
+        padding: 12px 10px;
+        font-size: 14px;
+    }
+    .choosebtn {
+        padding: 60px 0 30px;
+    }
+    .bootstrap-select .dropdown-toggle .filter-option-inner-inner {
+        overflow: hidden;
+        font-size: 14px;
+    } 
+    .dropdown-item {
+        display: block;
+        width: 100%;
+        padding: 2px 10px;
+    }  
+    .form_submit {
+        margin-top: 20px;
+    }
+    .bootstrap-select .dropdown-menu li a {
+        font-size: 14px;
+    }
+    .contact .inner_banner.banner_text {
+        padding-top: 160px;
     }
 }
 
@@ -797,7 +961,7 @@ margin-bottom: 0;
 
 @media only screen and (max-width:1099px) {
     .main_menu li a {
-        font-size: 18px;
+        font-size: 14px;
     }
     .logo.img-fluid {
         width: 100px;
@@ -1027,6 +1191,9 @@ margin-bottom: 0;
     .cline.lline img {
         width: 100vw !important;
     }
+    .main_menu li a {
+        font-size: 18px;
+    }
 }
 
 
@@ -1060,6 +1227,16 @@ margin-bottom: 0;
         width: 100%;
         font-size: 18px;
         line-height: 34px;
+    }
+    .cont.bg.contact .main_banner {
+        background-position: top right 20%;
+        background-size: cover;
+    }
+    .form-col {
+        padding: 30px;
+    }
+    .formholder .form-group {
+        margin: 0 -30px;
     }
 }
 
@@ -1260,6 +1437,43 @@ margin-bottom: 0;
     }
     .roytlstrip {
         padding: 70px 20px;
+    }
+    .choosebtn a {
+        font-size: 13px;
+    }
+    .form-col {
+        padding: 30px;
+        flex-basis: 100%;
+        max-width: 100%;
+    }
+    .formholder > div.active {
+        flex-basis: 98%;
+    }
+    .formholder > div {
+        padding: 3px;
+    }
+    .locarea li {
+        font-size: 10px;
+        line-height: 10px;
+        padding: 0 6px;
+    }
+    .loc_icon {
+        padding-right: 5px;
+        font-size: 10px;
+        line-height: 12px;
+    }
+    .choosebtn a {
+        font-size: 12px;
+    }
+    .formholder > div {
+        max-height: 200px;
+    }
+    .formholder > div.active {
+        max-height: 2000px;
+    }
+    .cont.bg.contact .main_banner {
+        background-position: top right 20%;
+        background-size: auto;
     }
 }
 
