--- a/css/style.css
+++ b/css/style.css
@@ -435,7 +435,8 @@ margin-bottom: 0;
 }
 .psection-1 .plicon_inr img {
     max-height: 60px;
-    object-fit: contain;
+    -o-object-fit: contain;
+       object-fit: contain;
 }
 .red_strip.clients {
     background: url(../img/clientsbg.jpg) no-repeat center transparent;
@@ -447,7 +448,8 @@ margin-bottom: 0;
 .cline.lline {
     top: 285px;
     left: calc(-50vw + 50%);
-    animation: none;
+    -webkit-animation: none;
+            animation: none;
 }
 .cline.lline img {
     width: 100vw;
@@ -572,6 +574,10 @@ margin-bottom: 0;
     border: 1px solid #ccc;
     font-size: 18px;
     transition: all 0.3s ease-in-out;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
 }
 .choosebtn a:hover,.choosebtn a.active {
     background: #ec1c24;
@@ -697,6 +703,30 @@ margin-bottom: 0;
 .artist_form {
     padding-bottom: 100px;
 }
+.loader {
+    position: fixed;
+    width: 100% !important;
+    height: 100% !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 99999999999;
+    background: #18171c;
+    left: 0;
+    top: 0;
+}
+.loader_inner {
+    position: relative;
+}
+.fill {
+    position: absolute;
+    width: 0;
+    overflow: hidden;
+    transition: all 3s ease-in-out;
+}
+.fill.full {
+    width: 100%;
+}
 /* MQ */
 
 @media only screen and (max-width:1610px) {
@@ -794,7 +824,8 @@ margin-bottom: 0;
     }
     .psection-1 .plicon_inr img {
         max-height: 40px;
-        object-fit: contain;
+        -o-object-fit: contain;
+           object-fit: contain;
     }
     .plicon_inr img {
         width: 140px;
@@ -1137,7 +1168,8 @@ margin-bottom: 0;
     }
     .psection-1 .plicon_inr img {
         max-height: 40px;
-        object-fit: contain;
+        -o-object-fit: contain;
+           object-fit: contain;
         width: 100%;
     }
     .psection-1 .col-md-6 {
@@ -1145,7 +1177,8 @@ margin-bottom: 0;
         max-width: 100%;
     }
     .psection-1 .plicon_inr img {
-        object-fit: contain;
+        -o-object-fit: contain;
+           object-fit: contain;
         width: 100%;
         max-width: 150px;
         max-height: 30px;
