contct form padding bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -561,7 +561,7 @@ margin-bottom: 0;
     background-size: auto 85vh;
 }
 .choosebtn {
-    padding: 80px 0;
+    padding: 80px 2px;
     display: flex;
 }
 .choosebtn a {
@@ -607,6 +607,8 @@ margin-bottom: 0;
     width: 100%;
     /* min-height: 300px; */
     opacity: 1;
+    padding-left: 2px;
+    padding-right: 2px;
 }
 .formholder .form-group {
     display: flex;
